no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -773,11 +773,8 @@ POLICY.onerror                                  #What do on integrity failures:
                                              \=+===============================+=/
 
 
-new Blob(...)                            15.7.0*#Like DOM except:
-                                         15.7.0*#  - new Blob():
-                                         15.7.0*#     - no OPTS.endings
-                                         15.7.0*#     - OPTS.encoding 'ENCODING' (def: 'utf8')
-                                         15.7.0*#  - no BLOB.stream()
+new Blob(...)                            15.7.0*#Like DOM
+                                         16.7.0*#No OPTS.endings nor BLOB.stream()
 
 [S][T][D][U][A]BUFFER                           #Means BUFFER|[STR]|[TYPED_ARR]|[DATAVIEW]|[UINT8ARR]|[ARRBUFFER]
 
@@ -1958,6 +1955,13 @@ pathToFileURL('PATH')->URI                      #  - 'PATH' is OS-specific, e.g.
 
 urlToHttpOptions(URI)->OBJ               15.7.0*#Returns OBJ to use with HTTP[S].request()
 
+URL.createObjectURL(BLOB)->'URL'         16.7.0*#Like DOM except:
+URL.resolveObjectURL('URL')              16.7.0*#  - 'blob:nodata:UUID'
+                                         16.7.0*#  - lifetime is thread
+                                         16.7.0*#  - cannot be accessed by other processes|threads
+buffer.resolveObjectURL('URL')
+ ->BLOB|undefined                        16.7.0*#
+
 
                                              /=+===============================+=\
                                             /  :                               :  \
@@ -2017,6 +2021,7 @@ setDefaultResultOrder(STR)               16.4.0*#
 new Resolver([OPTS])                            #RESOLVER
                                                 #OPTS:
                                                 #  - timeout NUM (-1 for def) (in ms)
+                                         16.7.0*#  - tries NUM (def: 4)
                                                 #In following methods, if RESOLVER is missing, use builtin RESOLVER
 [RESOLVER.]resolve
  ('HOST'[, STR2], FUNC(ERROR, VAL_ARR))         #Same as lookup() but STR2 can any PTR record type: "A" (def), "AAAA", "MX", "TXT", "SRV", "PTR", "NS", "CNAME", "SOA", "NAPTR" or "ANY" (guesses)
@@ -2192,8 +2197,15 @@ PWD ==>                                         #All relative to process.cwd()
                                                 #[un]watch[File]() and createRead|WriteStream()
                                                 #Will throw exceptions instead of using ERROR.
 
-copyFile(PATH, PATH2[, NUM][, FUNC(ERROR)])     #NUM is an or'd flag:
+copyFile(PATH, PATH2[, NUM][, FUNC(ERROR)])     #Copy files
+                                                #NUM is an or'd flag:
                                                 #  - COPYFILE_EXCL: fail if PATH2 already exists
+cp(PATH, PATH2[, OPTS], FUNC(ERROR))     16.7.0*#Copy files|directories
+                                         16.7.0*#OPTS:
+                                         16.7.0*#  - recursive BOOL (def: false)
+                                         16.7.0*#  - errorOnExist BOOL (def: false): throw if PATH2 exists
+                                         16.7.0*#  - dereference BOOL (def: false): for symlinks
+                                         16.7.0*#  - preserveTimestamps BOOL (def: false): keep mtime|atime|ctime
 rename(PATH, PATH2, FUNC(ERROR))                #Cannot be done between partitions on Linux (see move-file doc)
 
 [f|l]chown(PATH|FD_INT, UID, GID, FUNC(ERROR))  #Noop on Windows
