no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -2203,9 +2203,15 @@ copyFile(PATH, PATH2[, NUM][, FUNC(ERROR)])     #Copy files
 cp(PATH, PATH2[, OPTS], FUNC(ERROR))     16.7.0*#Copy files|directories
                                          16.7.0*#OPTS:
                                          16.7.0*#  - recursive BOOL (def: false)
+                                         16.7.0*#  - filter('PATH')->BOOL:
+                                         16.7.0*#     - do not copy if false
+                                         16.7.0*#     - 'PATH' is:
+                                         16.7.0*#        - top-level: PATH as is, stringified
+                                         16.7.0*#        - children (if recursive): normalized file path, relative to cwd
                                          16.7.0*#  - errorOnExist BOOL (def: false): throw if PATH2 exists
+                                         16.7.0*#  - force BOOL (def: true): overwrite PATH2 file|directory if exists
                                          16.7.0*#  - dereference BOOL (def: false): for symlinks
-                                         16.7.0*#  - preserveTimestamps BOOL (def: false): keep mtime|atime|ctime
+                                         16.7.0*#  - preserveTimestamps BOOL (def: false): keep mtime|atime (but not ctime|birthtime)
 rename(PATH, PATH2, FUNC(ERROR))                #Cannot be done between partitions on Linux (see move-file doc)
 
 [f|l]chown(PATH|FD_INT, UID, GID, FUNC(ERROR))  #Noop on Windows
