--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -923,6 +923,7 @@ ISTREAM.readableFlowing                         #Can be:
                                                 #  - null: when all data has been consumed, or stream has not started been read yet
                                                 #  - true: when stream is being read, i.e. after on('data')
                                                 #  - false: when stream is being paused, i.e. after pause()
+ISTREAM.readableDidRead                  16.7.0*#BOOL. Whether 'data|end|error|close' was fired
 ISTREAM.readableEnded                           #BOOL. Whether 'end' event was fired.
 ISTREAM.pipe(OSTREAM[, { end: BOOL }])->OSTREAM #Same as ISTREAM.on("data", sval => OSTREAM.write(SVAL))
                                                 #If BOOL true (def), call OSTREAM.end() on ISTREAM.on('end|error') (except on stdout|stderr)
@@ -3572,10 +3573,8 @@ PERFENTRY.*                                     #     - keep 'mark' and 'measure
 PERFOBSERVER                                    #     - 'timing' PERFORMANCETIMING -> 'nodeTiming' PERFNODETIMING
                                                 #     - no 'navigation' PERFORMANCENAVIGATION
                                                 #     - also has 'gc', 'function', 'http' or 'http2' (HTTP request started|done)
-                                                #  - no PERFORMANCE.clearMeasures|getEntries*() (but PERFLIST.getEntries*() are kept)
-                                                #  - PERFOBSERVER.observe OPTS.buffered BOOL:
-                                                #     - if false (def), fire listener callbacks sync
-                                                #     - if true, use setImmediate()
+                                         16.6.0*#  - no PERFORMANCE.clearMeasures|getEntries*() (but PERFLIST.getEntries*() are kept)
+                                         16.6.0*#  - no PERFOBSERVER.takeRecords()
                                                 #  - PERFOBSERVER is an ASYNCRESOURCE
                                          16.0.0*#performance is global
 WORKER.performance                      12.22.0*#Same but inside a WORKER
