no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -21,7 +21,7 @@ Todo:
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #16.6.2 (current), 15.14.0 (maintenance), 14.17.5 (active LTS), 12.22.5 (maintenance)
+VERSION ==>                                     #16.7.0 (current), 15.14.0 (maintenance), 14.17.5 (active LTS), 12.22.5 (maintenance)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -3573,7 +3573,7 @@ PERFENTRY.*                                     #     - keep 'mark' and 'measure
 PERFOBSERVER                                    #     - 'timing' PERFORMANCETIMING -> 'nodeTiming' PERFNODETIMING
                                                 #     - no 'navigation' PERFORMANCENAVIGATION
                                                 #     - also has 'gc', 'function', 'http' or 'http2' (HTTP request started|done)
-                                         16.6.0*#  - no PERFORMANCE.clearMeasures|getEntries*() (but PERFLIST.getEntries*() are kept)
+                                         16.6.0*#  - no PERFORMANCE.clearMarks|clearMeasures|getEntries*() (but PERFLIST.getEntries*() are kept)
                                          16.6.0*#  - no PERFOBSERVER.takeRecords()
                                                 #  - PERFOBSERVER is an ASYNCRESOURCE
                                          16.0.0*#performance is global
