no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -1036,7 +1036,25 @@ WritableStreamDefaultWriter
 TransformStream
 ByteLengthQueuingStrategy                16.5.0*#See DOM doc
 CountQueuingStrategy                     16.5.0*#Print experimental warning
+CompressionStream
+DecompressionStream                      16.7.0*#See DOM doc
 
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:       STREAM/CONSUMERS        :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+ANY_RSTREAM                                     #RSTREAM|ISTREAM|ASYNC_ITERABLE
+arrayBuffer(ANY_RSTREAM)->PROMISE_
+blob(ANY_RSTREAM)->PROMISE_
+buffer(ANY_RSTREAM)->PROMISE_
+json(ANY_RSTREAM)->PROMISE_
+text(ANY_RSTREAM)->PROMISE_
+                                         16.7.0*#See DOM doc
+                                         16.7.0*#Print experimental warning
 
                                              /=+===============================+=\
                                             /  :                               :  \
@@ -3573,8 +3591,9 @@ PERFENTRY.*                                     #     - keep 'mark' and 'measure
 PERFOBSERVER                                    #     - 'timing' PERFORMANCETIMING -> 'nodeTiming' PERFNODETIMING
                                                 #     - no 'navigation' PERFORMANCENAVIGATION
                                                 #     - also has 'gc', 'function', 'http' or 'http2' (HTTP request started|done)
-                                         16.6.0*#  - no PERFORMANCE.clearMarks|clearMeasures|getEntries*() (but PERFLIST.getEntries*() are kept)
-                                         16.6.0*#  - no PERFOBSERVER.takeRecords()
+                                         16.7.0*#  - no PERFORMANCE.clearMarks|clearMeasures|getEntries*() (but PERFLIST.getEntries*() are kept)
+                                         16.7.0*#  - no PERFOBSERVER.takeRecords()
+                                         16.7.0*#  - no PerfObserver.supportedEntryTypes
                                                 #  - PERFOBSERVER is an ASYNCRESOURCE
                                          16.0.0*#performance is global
 WORKER.performance                      12.22.0*#Same but inside a WORKER
