no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -1048,13 +1048,13 @@ DecompressionStream                      16.7.0*#See DOM doc
 
 
 ANY_RSTREAM                                     #RSTREAM|ISTREAM|ASYNC_ITERABLE
-arrayBuffer(ANY_RSTREAM)->PROMISE_
-blob(ANY_RSTREAM)->PROMISE_
-buffer(ANY_RSTREAM)->PROMISE_
-json(ANY_RSTREAM)->PROMISE_
-text(ANY_RSTREAM)->PROMISE_
-                                         16.7.0*#See DOM doc
-                                         16.7.0*#Print experimental warning
+text(ANY_RSTREAM)->PROMISE_STR
+buffer(ANY_RSTREAM)->PROMISE_BUFFER
+blob(ANY_RSTREAM)->PROMISE_BLOB          16.7.0*#See DOM doc
+arrayBuffer(ANY_RSTREAM)                 16.7.0*#Print experimental warning
+ ->PROMISE_ARRBUFFER                     16.7.0*#Read whole input and convert it to another type
+json(ANY_RSTREAM)->PROMISE_VAL           16.7.0*#Like text() + JSON.parse()
+
 
                                              /=+===============================+=\
                                             /  :                               :  \
