no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -21,7 +21,7 @@ Todo:
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #16.7.0 (current), 15.14.0 (maintenance), 14.17.5 (active LTS), 12.22.5 (maintenance)
+VERSION ==>                                     #16.8.0 (current), 15.14.0 (maintenance), 14.17.5 (active LTS), 12.22.5 (maintenance)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -925,6 +925,7 @@ ISTREAM.readableFlowing                         #Can be:
                                                 #  - false: when stream is being paused, i.e. after pause()
 ISTREAM.readableDidRead                  16.7.0*#BOOL. Whether 'data|end|error|close' was fired
 ISTREAM.readableEnded                           #BOOL. Whether 'end' event was fired.
+ISTREAM.readableAborted                  16.8.0*#BOOL. Whether 'end' event was fired after erroring or being destroyed
 ISTREAM.pipe(OSTREAM[, { end: BOOL }])->OSTREAM #Same as ISTREAM.on("data", sval => OSTREAM.write(SVAL))
                                                 #If BOOL true (def), call OSTREAM.end() on ISTREAM.on('end|error') (except on stdout|stderr)
 ISTREAM.unpipe([OSTREAM])                       #Stops pipe() (def: all)
@@ -3717,6 +3718,8 @@ ENCODING                                        #Either: ascii, utf8 (def), urf1
 TextDecoder|TextEncoder                         #See DOM doc.
 TextEncoderStream                        16.6.0*#See DOM doc
 TextDecoderStream                        16.6.0*#Print experimental warning
+
+UTIL.toUSVString(STR)->STR               16.8.0*#Replace U-d800-db7f and U-dc00-dfff to U-fffd
 
 
                                              /=+===============================+=\
