no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -923,9 +923,11 @@ ISTREAM.readableFlowing                         #Can be:
                                                 #  - null: when all data has been consumed, or stream has not started been read yet
                                                 #  - true: when stream is being read, i.e. after on('data')
                                                 #  - false: when stream is being paused, i.e. after pause()
-ISTREAM.readableDidRead                  16.7.0*#BOOL. Whether 'data|end|error|close' was fired
+ISTREAM.readableDidRead                  16.7.0*#BOOL. Whether 'data' was fired
 ISTREAM.readableEnded                           #BOOL. Whether 'end' event was fired.
 ISTREAM.readableAborted                  16.8.0*#BOOL. Whether 'end' event was fired after erroring or being destroyed
+Readable.isDisturbed(ISTREAM|RSTREAM)
+ ->BOOL                                  16.8.0*#Whether either data was read or stream was cancelled
 ISTREAM.pipe(OSTREAM[, { end: BOOL }])->OSTREAM #Same as ISTREAM.on("data", sval => OSTREAM.write(SVAL))
                                                 #If BOOL true (def), call OSTREAM.end() on ISTREAM.on('end|error') (except on stdout|stderr)
 ISTREAM.unpipe([OSTREAM])                       #Stops pipe() (def: all)
@@ -1011,6 +1013,18 @@ IOSTREAM ==>                                    #Implement both ISTREAM and OSTR
                                                 #  - STREAM.Transform:
                                                 #     - same but where there is a correlation between input and output (ex: crypto, but not HTTP)
                                                 #     - only semantic
+
+Duplex.from(VAL)->IOSTREAM               16.8.0*#Creates IOSTREAM from VAL:
+                                         16.8.0*#  (read-only)
+                                         16.8.0*#  - ISTREAM
+                                         16.8.0*#  - STR|ARRBUFFER|ASYNC_ITERABLE|BLOB
+                                         16.8.0*#  - PROMISE
+                                         16.8.0*#  (write-only)
+                                         16.8.0*#  - OSTREAM
+                                         16.8.0*#  - FUNC()->PROMISE_undefined
+                                         16.8.0*#  (read|write)
+                                         16.8.0*#  - OBJ: readable|writable VAL
+                                         16.8.0*#  - ASYNC_GENERATOR_FUNC
 
 INHERITING STREAMS ==>                          #To create STREAM child classes, just inherit them and reimplement functions
                                                 #_read(), _write[v](), _transform() or _flush() (see online doc), without calling them directly.
