no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -939,7 +939,7 @@ ISTREAM ITERATION ==>                           #ISTREAM is an ASYNC_ITERABLE
 ISTREAM.iterator([OPTS])->ASYNC_ITERATOR        #OPTS:
                                                 #  - destroyOnReturn BOOL (def: true)
                                                 #  - destroyOnError BOOL (def: true)
-Readable.from(SVAL_ITERABLE[, OBJ])             #OBJ:
+Readable.from(SVAL_[ASYNC_]ITERABLE[, OBJ])     #OBJ:
  ->ISTREAM                                      #  - same as new Readable(OBJ)
                                                 #  - def objectMode is true
 
@@ -1016,15 +1016,19 @@ IOSTREAM ==>                                    #Implement both ISTREAM and OSTR
 
 Duplex.from(VAL)->IOSTREAM               16.8.0*#Creates IOSTREAM from VAL:
                                          16.8.0*#  (read-only)
-                                         16.8.0*#  - ISTREAM
-                                         16.8.0*#  - STR|ARRBUFFER|ASYNC_ITERABLE|BLOB
-                                         16.8.0*#  - PROMISE
+                                         16.8.0*#  - ISTREAM: kept as is
+                                         16.8.0*#  - PROMISE_undefined: read no VAL
+                                         16.8.0*#  - STDBUFFER: read as a single VAL
+                                         16.8.0*#  - BLOB (using BLOB.arrayBuffer()): same
+                                         16.8.0*#  - SVAL_ASYNC_ITERABLE (using Readable.from()): read each SVAL
                                          16.8.0*#  (write-only)
-                                         16.8.0*#  - OSTREAM
-                                         16.8.0*#  - FUNC()->PROMISE_undefined
+                                         16.8.0*#  - OSTREAM: kept as is
+                                         16.8.0*#  - FUNC()->PROMISE_undefined: write no VAL
                                          16.8.0*#  (read|write)
+                                         16.8.0*#  - ASYNC_GENERATOR_FUNC(ASYNC_ITERABLE):
+                                         16.8.0*#     - writing pipes to ASYNC_ITERABLE
+                                         16.8.0*#     - reading is taken from FUNC's yields
                                          16.8.0*#  - OBJ: readable|writable VAL
-                                         16.8.0*#  - ASYNC_GENERATOR_FUNC
 
 INHERITING STREAMS ==>                          #To create STREAM child classes, just inherit them and reimplement functions
                                                 #_read(), _write[v](), _transform() or _flush() (see online doc), without calling them directly.
