no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -568,6 +568,9 @@ PARAMETERS ==>                                  #  - positional
                                                 #        - i.e. assigning to an OBJ argument removes precedent reference:
                                                 #            function(OBJ){ OBJ = OBJ2 }     // Removes OBJ reference
                                                 #            function(OBJ){ OBJ.VAR = VAL }  // Keep OBJ reference
+                                                #  - maximum length is implementation-specific
+                                                #     - 118044 with V8
+                                                #     - including with FUNC.bind|call|apply() or array spread
                                               -|#  - can use trailing commas
                                               -|#  - VAR = VAL: default value:
                                               -|#     - can refer to previous parameter of same function.
