no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -693,7 +693,7 @@ Object.fromEntries(ITERABLE)                  -|#Inverse Object.entries(), i.e. 
 Object.getOwnPropertyNames(OBJ)                 #Returns own keys, including non-enumerable
 OBJ.propertyIsEnumerable('VAR')                 #Returns true if OBJ['VAR'] is in Object.keys()
 OBJ.hasOwnProperty('VAR')                       #Returns true if OBJ['VAR'] is in Object.getOwnPropertyNames()
-Object.hasOwn(OBJ, 'VAR')                   *-|~#Same
+Object.hasOwn(OBJ, 'VAR')              16.9.0*-|#Same
 
 'VAR' in OBJ                                    #Returns true if OBJ['VAR'] is member, including shared or non-enumerable.
                                                 #Negation: !('VAR' in OBJ)
@@ -842,9 +842,10 @@ class [TYPE] [extends TYPE_PARENT] {          -|#Other syntax to define inherita
 class ... {
   VAR[ = EXPR][, ...];                        -|#Calls this.VAR = EXPR in constructor, in beginning, just after super()
                                               -|#VAR can [STR]
-  static VAR[ = EXPR][, ...];                 -|#Calls TYPE.VAR = EXPR right-away (in EXPR, this is TYPE)
+  static VAR[ = EXPR][, ...];                 -|#Calls TYPE.VAR = EXPR right-away (in EXPR, `this` is TYPE)
   [static] #VAR[ = EXPR][, ...];       14.6.0*-|#Like VAR = EXPR and FUNC(...), except can only be refered to inside class,
   #FUNC(...) { ... }                   14.6.0*-|#i.e. using this.#VAR and this.#FUNC(...). Not inherited.
+  static { ... }                             *-|#Calls ... right away (`this` is TYPE)
 }                                             -|#Can only be declared during class declaration.
 
 super                                         -|#Inside class {...}, same as TYPE_PARENT
