no commit message

--- a/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/acorn.javascript_cli.txt
+++ b/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/acorn.javascript_cli.txt
@@ -39,7 +39,7 @@ ALTERNATIVES ==>                  #  - esprima:
                                   #  - cherow: not maintained
                                   #  - esprit: not maintained
 
-VERSION ==>                       #8.4.1
+VERSION ==>                       #8.5.0
                                   #Browser, Node.js or CLI
                                   #JavaScript parser and tokenizer
 
@@ -160,7 +160,7 @@ TOKEN_TYPE.label                  #Name STR:
                                              \=+===============================+=/
 
 
-acorn [FILE]                      #CLI. Calls ACORN.parse() -> console.log()
+acorn [FILE...]                   #CLI. Calls ACORN.parse() -> console.log()
                                   #Def FILE: stdin
                                   #Exit code 1 if error
 --tokenize                        #Same with ACORN.tokenize()
