no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -501,7 +501,7 @@ class [CLASS] [extends PARENT] {  #Type 'Class':
                                se|#  - [value EXPR]
                                se|#  - static BOOL
                                se|#  - computed BOOL
-  static { STATEMENT... }        *#Child of BLOCK, type 'StaticBlock'
+  static { STATEMENT... }         #Child of BLOCK, type 'StaticBlock'
 class CLASS ... {}                #Child of CLASS+DECLARATION, type 'ClassDeclaration'
 class [CLASS] ... {}              #Child of CLASS+EXPR, type 'ClassExpression'
 
