no commit message

--- a/Languages/Language_processing/Beautifiers/Multi_language/prettier.node_cli.txt
+++ b/Languages/Language_processing/Beautifiers/Multi_language/prettier.node_cli.txt
@@ -19,7 +19,7 @@ ALTERNATIVES ==>                  #For:
                                   #     - esformatter (and jsfmt): not maintained
                                   #     - es-beautifier: not maintained
 
-VERSION ==>                       #2.3.2
+VERSION ==>                       #2.4.0
 
 OPINIONATED ==>                   #By design prettier does not allow configuration.
                                   #There are only few configuration options available for JavaScript
@@ -211,7 +211,6 @@ GENERAL ==>                       #Parser is @babel/parser
                                   #  - 'preserve': do not change
                                   #  - 'consistent': must all have same quoting
 
---jsx-bracket-same-line           #In JSX, closing > not a newline
 --jsx-single-quote                #In JSX, instead of double quotes
 
 ESLINT-CONFIG-PRETTIER ==>       ##ESLint config that:
@@ -280,6 +279,7 @@ GENERAL ==>                       #Parser is parse5
                                   #  - 'strict': always keep whitespaces
                                   #  - 'ignore': never keep whitespaces
                                   #Can also use <!-- display: block|inline --> HTML comment
+--bracket-same-line               #closing > not a newline
 
 
                                              /=+===============================+=\
