no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1045,6 +1045,8 @@ no-multi-assign [OBJ]             #Avoid VAR = VAR2 = VAL
                                   #  - ignoreNonDeclaration BOOL (def: false): if true, ignore if assign but does not initializes
 
 prefer-object-spread              #Avoid Object.assign(OBJ, ...) except if OBJ is a variable, or ...ARR spread is used
+unicorn/
+ no-useless-fallback-in-spread   ##Prefer { ...OBJ } over { ...(OBJ || {} ) }
                                   #Prefer { ...OBJ }
 
 no-cond-assign [STR]              #Avoid assignments in TEST
@@ -1632,7 +1634,7 @@ no-useless-concat                 #Avoid STR_LIT + STR2_LIT
 prefer-template                   #Avoid STR + STR2, prefer `...`
 no-template-curly-in-string       #Avoid ${} inside "" or ''
 
-unicorn/*                        ##Module "eslint-plugin-unicorn" (35.0.0)
+unicorn/*                        ##Module "eslint-plugin-unicorn" (36.0.0)
 
 unicorn/
  prefer-string-starts-ends-with  ##Must use STR.startsWith|endsWith() when possible
@@ -2269,6 +2271,8 @@ no-alert                          #Avoid alert|confirm|prompt()
 unicorn/prefer-add-event-listener##Avoid on() and "on* = FUNC", use addEventListener|removeEventListener() instead
  [OBJ]                           ##OBJ:
                                  ##  - excludedPackages 'PKGNAME'_ARR
+unicorn/
+ no-invalid-remove-event-listener##Must be a FUNC reference, not new FUNC, to removeEventListener()
 
 no-obj-calls                      #Avoid Math(), JSON(), Reflect(), Atomics() (those are not functions although capitalized)
 
