no commit message

--- a/Languages/JavaScript/JavaScript_frameworks/View/One_way_data_binding/Virtual_DOM/React/react.javascript.txt
+++ b/Languages/JavaScript/JavaScript_frameworks/View/One_way_data_binding/Virtual_DOM/React/react.javascript.txt
@@ -612,7 +612,7 @@ TESTUTILS.Simulate.EVENT         ##Trigger EVENT, but still work with virtual DO
                                              \=+===============================+=/
 
 
-react/*                          ##Node module "eslint-plugin-react" (7.24.0)
+react/*                          ##Node module "eslint-plugin-react" (7.25.1)
                                  ##Can use CONF.settings.react:
                                  ##  - createClass 'FUNC' (def: 'createReactClass'): used to create RTYPE
                                  ##    when not using ES6 classes
@@ -651,7 +651,9 @@ react/style-prop-object [OBJ]    ##PROP 'style' must be an OBJ
                                  ##  - allow 'RTYPE'_ARR
 react/void-dom-elements-
  no-children                     ##Prevent RDOM with no child (like <hr/>) from having children
-react/no-children-prop           ##Avoid passing children as props
+react/no-children-prop [OBJ]     ##Avoid passing children as props
+                                 ##OBJ:
+                                 ##  - allowFunctions BOOL (def: false): allow passing FUNC()->children
 react/no-redundant-should-
  component-update                ##Avoid using both shouldComponentUpdate() and PureComponent
 
@@ -685,6 +687,7 @@ react/jsx-no-target-blank [OBJ]  ##<a target="_blank"> must be accompanied by re
                                  ##  - enforceDynamicLinks 'always' (def) or 'never': whether to enforce it when URI is JSX
                                  ##  - allowReferrer BOOL: if false (def), requires noreferrer
                                  ##  - warnOnSpreadAttributes BOOL (def: false): checks {...OBJ}
+                                 ##  - links|forms BOOL (def: true|false): forbid inside links|forms
 react/jsx-no-script-url [OBJ_ARR]##No "javascript:*" URLs
                                  ##OBJ_ARR:
                                  ##  - name 'TAG': only for <TAG>
@@ -733,6 +736,7 @@ react/forbid-foreign-prop-types  ##When importing propTypes, must do it as:
  [OBJ]                           ##  import Component, { propTypes [as ...] } from 'MDL'
                                  ##OBJ:
                                  ##  - allowInPropTypes BOOL (def: false): allow if using from another component
+react/prefer-exact-props         ##Must use module 'prop-types-exact'
 
 react/sort-comp [OBJ]            ##Enforce RTYPE properties sorting order
                                  ##OBJ:
@@ -876,6 +880,7 @@ react/jsx-max-depth [OBJ]        ##Max nesting OBJ.max NUM (def: 2)
 react/jsx-pascal-case [OBJ]      ##Requires <RType> to be PascalCase
                                  ##OBJ:
                                  ##  - allowAllCaps BOOL (def: false)
+                                 ##  - allowLeadingUnderscore BOOL (def: false)
                                  ##  - allowAllNamespace BOOL (def: false): if true, only in 'VAR' if 'VAR.VAR2'
                                  ##  - ignore 'RTYPE_GLOB'_ARR: whitelists
 react/boolean-prop-naming [OBJ]  ##Requires PROPs with propTypes.VAR (OBJ.propTypeNames "VAR"_ARR, def "bool") names to
@@ -926,8 +931,10 @@ react/jsx-fragments [STR]        ##Require JSX fragments to be:
                                  ##  - 'syntax': <>...</> (except if using 'key' JSX attribute)
                                  ##  - 'element': <React.Fragment>...</React.Fragment>
 react/jsx-no-useless-fragments   ##Avoid <>...</> if either it:
-                                 ##  - has only one child
+ [OBJ]                           ##  - has only one child
                                  ##  - is the child of a RDOM
+                                 ##OBJ:
+                                 ##  - allowExpressions BOOL (def: false): allow single EXPR
 
 react/jsx-filename-extension     ##Requires files containing JSX to have OBJ.extensions '.EXT'_ARR (def: '.jsx')
  [OBJ]                           ##OBJ:
