no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -948,12 +948,12 @@ STREAM.Writable([OBJ])                          #Constructor for OSTREAM. OBJ me
                                                 #  - decodeStrings BOOL: if true (def), decodes to BUFFER before
                                                 #    calling underlying OSTREAM._write()
                                                 #  - objectMode|highWaterMark|signal: see above
-OSTREAM.write(SVAL[, 'ENCODING'[,FUNC()]])->BOOL#Writes chunks.
-                                                #FUNC() is fired when buffered + flushed.
+OSTREAM.write(SVAL[, 'ENCODING'                 #Writes chunks.
+ [, FUNC(ERROR)]])->BOOL                        #FUNC() is fired when buffered + flushed.
                                                 #BOOL:
                                                 #  - false if data cannot be buffered anymore (i.e. buffer is full)
                                                 #  - i.e. should wait for OSTREAM.once('drain') before writing again
-OSTREAM.end(SVAL[, 'ENCODING'[, FUNC()]])       #Same but for final chunk. FUNC is the finish event handler
+OSTREAM.end(SVAL[, 'ENCODING'[, FUNC(ERROR)]])  #Same but for final chunk. FUNC is the finish event handler
  ->OSTREAM                                   14*#or error event handler
 OSTREAM.destroy([ERROR])                        #
 OSTREAM.destroyed                               #BOOL
