--- a/Languages/JavaScript/JavaScript_frameworks/View/One_way_data_binding/Virtual_DOM/React/react.javascript.txt
+++ b/Languages/JavaScript/JavaScript_frameworks/View/One_way_data_binding/Virtual_DOM/React/react.javascript.txt
@@ -612,7 +612,7 @@ TESTUTILS.Simulate.EVENT         ##Trigger EVENT, but still work with virtual DO
                                              \=+===============================+=/
 
 
-react/*                          ##Node module "eslint-plugin-react" (7.25.3)
+react/*                          ##Node module "eslint-plugin-react" (7.26.0)
                                  ##Can use CONF.settings.react:
                                  ##  - createClass 'FUNC' (def: 'createReactClass'): used to create RTYPE
                                  ##    when not using ES6 classes
@@ -651,6 +651,7 @@ react/style-prop-object [OBJ]    ##PROP 'style' must be an OBJ
                                  ##  - allow 'RTYPE'_ARR
 react/void-dom-elements-
  no-children                     ##Prevent RDOM with no child (like <hr/>) from having children
+react/no-namespace               ##No HTML namespace (like "svg:*") in RDOM name
 react/no-children-prop [OBJ]     ##Avoid passing children as props
                                  ##OBJ:
                                  ##  - allowFunctions BOOL (def: false): allow passing FUNC()->children
@@ -869,6 +870,7 @@ react/jsx-no-duplicate-props     ##Prevents duplicate PROPs
 react/jsx-max-props-per-line     ##Max PROPs per line
  [OBJ]                           ##OBJ:
                                  ##  - maximum NUM (def: 1)
+                                 ##  - single|multi NUM: same but only inside single|multiple line elements
                                  ##  - when STR: 'always' (def) or 'multiline' (only checks if multiline JSX)
 react/jsx-props-no-spreading     ##Forbids <RTYPE {...PROPS}>
  [OBJ]                           ##OBJ:
