no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -988,9 +988,11 @@ try { ...  }
 [catch [(VAR)] { ... }]                       -|#(VAR) can be omitted
 [finally { ... }]                               #finally { ... } is always fired
 
-[new ]Error([STR])                              #OBJ usually used when throw VAL, because more info.
+[new ]Error([STR[, OPTS]])                      #OBJ usually used when throw VAL, because more info.
                                                 #Prefer with "new"
                                                 #STR is ERROR.message (def: "")
+                                       16.9.0*-|#OPTS:
+                                                #  - cause: sets ERROR.cause
                                                 #Some builtin ERROR thrown:
                                                 #  - ReferenceError: console.log(notdeclared)
                                                 #  - TypeError: null.FUNC()
@@ -1010,6 +1012,9 @@ ERROR.stack                                     #Stack trace STR
                                                 #See stack trace documentation for more information on: parsing, normalizing,
                                                 #beautifying, visualizing, etc.
                                                 #Printed by UTIL.inspect(ERROR)
+ERROR.cause                            16.9.0*-|#Inner ERROR2
+                                       16.9.0*-|#Optional. Can be any type.
+                                       16.9.0*-|#Not used by ERROR.stack nor toString()
 ERROR.toString()                                #'NAME: MESSAGE'
 
 
