--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -55,6 +55,7 @@ process.allowedNodeEnvironmentFlags             #Read-only SET with all availabl
 #!/usr/bin/env node                             #Shabang to execute a Node file directly with ./FILE
 
 npm                                             #Node packet manager (see doc)
+corepack                                 16.9.0*#Packet manager's manager
 
 
                                              /=+===============================+=\
