no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -21,7 +21,7 @@ Todo:
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #16.8.0 (current), 15.14.0 (maintenance), 14.17.5 (active LTS), 12.22.6 (maintenance)
+VERSION ==>                                     #16.9.1 (current), 15.14.0 (maintenance), 14.17.5 (active LTS), 12.22.6 (maintenance)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -695,12 +695,10 @@ PACKAGE.exports[.CONDITION].PATH                #'PATH2'. Like PACKAGE.exports[.
                                                 #PATH must start with '.':
                                                 #  - matched against 'MODULE' in imported path
                                                 #  - can be single '.'
-                                                #If PATH ends with:
-                                                #  - '/*':
-                                                #     - is a prefix
-                                                #     - PATH2 must include * (not necessarily at end)
-                                                #     - if several matches, longer prefixes prevail
-                                                #  - otherwise: exact match
+                                                #PATH is exact match
+                                                #PATH+PATH2 can contain wildcard '*':
+                                                #  - must both contain it
+                                                #  - if several matches, longer prefixes prevail
                                                 #If no matches, errors.
                                                 #Always errors:
                                                 #  - i.e. forbid any 'MODULE/...'
@@ -1005,6 +1003,7 @@ pipeline(SRC[, TRANSFORM...], DEST,             #Like SRC.pipe(TRANSFORM)....pip
                                                 #OPTS:
                                         15.11.0*#  - signal ABORT_SIGNAL: call destroy() on OSTREAM on cancel
 PUMP(...)                                      ##Ponyfill for pipeline() (3.0.0) without iterable support
+compose(VAL...)->IOSTREAM                16.9.0*#Like pipeline() except returning an IOSTREAM that is not read|consumed right away
 
 promises.*
 require('stream/promises').*             15.0.0*#Promisified version of finished|pipeline()
@@ -3382,6 +3381,9 @@ generateKeyPair[Sync]('TYPE', OPTS              #Create asym key pair, where SBU
                                                 #  - divisorLength NUM: q size (in bits)
                                                 #  (EC)
                                                 #  - namedCurve STR: curve name
+                                                #  (RS-PSS)
+                                        16.10.0*#  - [mgf1]hashAlgoritm STR (RSA-PSS)
+                                        16.10.0*#  - saltLength STR (RSA-PSS)
 
 createPrivate|PublicKey(OPTS|SBUFFER)->KEY      #Create asym key pair. OPTS:
                                                 #  - key SBUFFER or (for 'Public') KEY
@@ -3403,10 +3405,8 @@ KEY.asymmetricKeyType                           #'rsa', 'dsa', 'ec', (if sym key
                                                 #'ed25519', 'ed448', 'x25519', 'x448', 'rsa-pss'
                                                 #'dh'
 KEY.asymmetricKeyDetails()->OBJ          15.7.0*#OBJ:
-                                         15.7.0*#  - modulusLength NUM: key size in bits (RSA|DSA)
-                                         15.7.0*#  - publicExponent BIGINT (RSA)
-                                         15.7.0*#  - divisorLength NUM (DSA)
-                                         15.7.0*#  - namedCurve STR (EC)
+                                         15.7.0*# - modulusLength|publicExponent|divisorLength|namedCurve|*hashAlgorithm|saltLength:
+                                         15.7.0*#   like generateKeyPair()
 KEY.symmetricSize                               #Byte length NUM. undefined if async
 KEY.export([OPTS])->SBUFFER                     #OPTS (if async):
                                                 #  - type, format, passphrase: like createPrivate|PublicKey()
